# urqmd_vishnew

./: .gitignore  CMakeLists.txt  readme.md  run.py
PlayGround/utillities/dEdeta/: cosh.py
PlayGround/utillities/dEdeta/dEdeta_iSS/: dEdeta0~5%.txt  dEdeta5~10%.txt
PlayGround/utillities/dNdy/: dNdeta0_0.3_0.25.txt
Transform/: CMakeLists.txt  EPTensor.cpp  Particle.cpp  Transform_para.txt  Vector4.cpp  blockres.f  ityp2pdg.f  main.cpp  process.cpp  transform.cpp
Transform/include/: EPTensor.h  Particle.h  Vector4.h  process.h  transform.h
Transform/utillities/: initial_figure.py
VISHNew/: CMakeLists.txt  FindHDF5.cmake  GNUmakefile  Initialization-1.03.for  VISH2p1V1.10.0.for  Vishydro.inp  compile.txt
VISHNew/Initial/: plot_history.py
iSS/: CMakeLists.txt  FindGSL.cmake  iSS_parameter.txt
iSS/src/: CMakeLists.txt  main.cpp
osc2u/: CMakeLists.txt  osc2u.f  ucoms.f
urqmd-3.4/: CMakeLists.txt  Makefile  compile.txt  compile_lhc.txt  init.f  input_frez  input_initial  maketables  output.f  urqmd.x86_64  urqmd_frez.sh  urqmd_initial.sh
urqmd-3.4/utillities/: CMakeLists.txt  QGP2.cpp  QGP_energy.cpp  QGP_energy_eta_14.cpp  QGP_result_energy_14.cpp  QGP_result_energy_19.cpp  centrality.py  urqmd_initial.py
utillities/: CMakeLists.txt
utillities/centrality/: centrality.py
utillities/dEdeta/: cal_dEdeta.py  dEdeta.cpp  plt_dEdeta.py
utillities/dNdy/: CMakeLists.txt  cal_dNdeta.py  central_AuAu200.txt  dNdeta.cpp  dNdeta.py  dNdeta0_0.28_1.0.txt  dNdeta1_0.28_1.0.txt  dNdy.for  plot_dNdeta.py
utillities/ftn2bin/: CMakeLists.txt  Particle.cpp  Particle.h  Vector4.cpp  Vector4.h  central.cpp  ftn2bin  ftn2bin.cpp  main.cpp  process.cpp  process.h
utillities/plot_surface/: plot_surface.py
utillities/pt-spectra/: compute-v2a-each-urqmd  one_bin.py
utillities/results/: plot_dNdy.py
utillities/surface/: Tdec.py
utillities/vn_pt/: 0_v2_AuAu200.txt  101_v2_AuAu200.txt  compute-apois  compute-bpois  compute-v2  compute-v2a  deal.sh  gg.sh  plot_v2.py  plot_vn_pt.py  run_vn.sh  v2.cpp  vn_format.cpp  vn_pt.cpp  vn_pt_ch_Au200_PHINIX_20~30%.txt  vn_pt_total.py
