PROJECT(URQMD_VISHNU)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
ENABLE_LANGUAGE(Fortran)
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_COMPILER g++)
SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/PlayGround)
INSTALL(PROGRAMS run.py DESTINATION .)
ADD_SUBDIRECTORY(Transform)
ADD_SUBDIRECTORY(urqmd-3.4)
ADD_SUBDIRECTORY(VISHNew)
ADD_SUBDIRECTORY(osc2u)
ADD_SUBDIRECTORY(iSS)
INSTALL(DIRECTORY utillities DESTINATION .)