SET(CMAKE_CXX_FLAGS "-O3 -std=c++11")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
FILE(GLOB TRANSFORM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
ADD_EXECUTABLE(transform ${TRANSFORM_SRC})
INSTALL(TARGETS transform DESTINATION transform)
INSTALL(FILES Transform_para.txt DESTINATION transform)
INSTALL(DIRECTORY utillities DESTINATION transform)