ENABLE_LANGUAGE(Fortran)
SET(CMAKE_Fortran_COMPILER h5fc)
SET(CMAKE_Fortran_FLAGS "-O3 -cpp -shlib -lm -lz -fno-align-commons")
FILE(GLOB VISHNEW_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.for ${CMAKE_CURRENT_SOURCE_DIR}/*.f90 )
ADD_EXECUTABLE(VISHNew ${VISHNEW_SRC} )
# FIND_PACKAGE(HDF5 REQUIRED COMPONENTS Fortran Fortran_HL)
# TARGET_INCLUDE_DIRECTORIES(VISHNew  PRIVATE ${HDF5_INCLUDE_DIRS})
# TARGET_LINK_LIBRARIES(VISHNew  PRIVATE ${HDF5_Fortran_LIBRARIES} ${HDF5_Fortran_HL_LIBRARIES})
INSTALL(TARGETS VISHNew DESTINATION VISHNew)
INSTALL(FILES extraParas.inp Vishydro.inp DESTINATION VISHNew)
INSTALL(DIRECTORY EOS DESTINATION VISHNew)